--- a/index.html
+++ b/index.html
@@ -2397,7 +2397,7 @@
             { name: "왕대박복권방", addr: "경북 문경시 중앙로", panoId: 1184892306, pov: { pan: 308.56, tilt: 3.85, zoom: 2 } },
             { name: "알리바이", addr: "광주 광산구 수등로", panoId: 1199874247, pov: { pan: 70.76, tilt: -0.16, zoom: -3 } },
             { name: "오케이상사", addr: "서울 서초구 신반포로 176 (반포동)", panoId: 1018301543, pov: { pan: 184.52, tilt: 10.0, zoom: 0 } },
-            { name: "잠실매점", addr: "서울 송파구 신천동 7-18번지 잠실역 8번 출구 앞 가판", panoId: 1197820708, pov: { pan: 339.1, tilt: 3.5, zoom: 1 } },
+            { name: "잠실매점", addr: "서울 송파구 올림픽로 269 1층 (잠실역 8번출구 앞)", panoId: 1197820708, pov: { pan: 355.0, tilt: -0.3, zoom: 1 } },
             { name: "월드컵복권방", addr: "경기 광주시 경안로 20", panoId: 1202723374, pov: { pan: 11.5, tilt: -0.6, zoom: 0 } },
             { name: "갈렙분식한식", addr: "서울 중랑구 망우동", panoId: 1198253759, pov: { pan: 108.88, tilt: 0.41, zoom: -3 } },
             { name: "로또킹", addr: "서울 영등포구 영중로", panoId: 1171055517, pov: { pan: 21.23, tilt: -4.98, zoom: 0 } },
@@ -2427,7 +2427,7 @@
             { name: "일등복권편의점", addr: "대구 달서구 대명천로 220", panoId: 1201526676, pov: { pan: 350.40, tilt: 1.57, zoom: -1 } },
             { name: "하늘로또", addr: "경기 여주시 세종로475번길", panoId: 1175070156, pov: { pan: 49.17, tilt: 3.23, zoom: 2 } },
             { name: "빅세일복권방", addr: "부산 부산진구 서면문화로", panoId: 1202698289, pov: { pan: 104.61, tilt: -2.96, zoom: 3 } },
-            { name: "세진전자통신", addr: "대구 서구 평리동 1094-4", panoId: 1201585664, pov: { pan: 83.32, tilt: 2.46, zoom: -3 } },
+            { name: "로또열풍 (세진전자통신)", addr: "대구 서구 서대구로 156", panoId: 1201585664, pov: { pan: 83.32, tilt: 2.46, zoom: -3 } },
             { name: "복권나라", addr: "서울 관악구 남부순환로 1739-9", panoId: 1198285612, pov: { pan: 330.0, tilt: 10.0, zoom: 2 } },
             { name: "다니엘사", addr: "경기 안산시 단원구 원선1로 38 101호", panoId: 1204134596, pov: { pan: 356.2, tilt: -3.0, zoom: 4 } },
             { name: "이마트24 순천산단점", addr: "전남 순천시 산단1길 6", panoId: 1173643437, pov: { pan: 257.9, tilt: 3.2, zoom: 3 } },
@@ -2478,9 +2478,12 @@
             { name: "복권전문점", addr: "경기 시흥시 중심상가로", panoId: 1176040872, pov: { pan: 38.81, tilt: 7.94, zoom: 0 } },
             { name: "세븐복권방", addr: "경기 파주시 해올2길", panoId: 1203125573, pov: { pan: 331.01, tilt: 4.71, zoom: 0 } },
             { name: "짱복권", addr: "서울 종로구 종로", panoId: 1197814790, pov: { pan: 1.03, tilt: 5.80, zoom: 0 } },
+            { name: "행운복권방", addr: "경기 의정부시 충의로 55" },
+            { name: "왕대박복권 (인더라인)", addr: "인천 부평구 십정동 577-6" },
             { name: "프렌드24시", addr: "광주 광산구 첨단중앙로", panoId: 1199708556, pov: { pan: 178.98, tilt: 7.22, zoom: 0 } },
             { name: "알리바이금당점", addr: "전남 순천시 대석길", panoId: 1173674879, pov: { pan: 359.32, tilt: 3.55, zoom: -2 } },
             { name: "해뜰날", addr: "경기 동두천시 중앙로", panoId: 1175647022, pov: { pan: 167.43, tilt: 0.87, zoom: 0 } },
+            { name: "노다지복권방", addr: "경기 용인시 처인구 마평동 735-1", panoId: 1198953144, pov: { pan: 126.6, tilt: 2.2, zoom: 2 } },
             { name: "GS25(계산동경점)", addr: "인천 계양구 계산동", panoId: 1199190145, pov: { pan: 312.16, tilt: -5.08, zoom: 0 } },
             { name: "창원병원앞매표소", addr: "경남 창원시 성산구 중앙동 104-1 가판", panoId: 1204481691, pov: { pan: 37.1, tilt: 9.5, zoom: 0 } },
             { name: "역전광장상회", addr: "경기 파주시 금촌1동 329-19", panoId: 1203271882, pov: { pan: 332.7, tilt: 5.0, zoom: 0 } },
@@ -2500,8 +2503,8 @@
             { name: "버스판매소", addr: "서울 영등포구 영등포동4가 441-10", panoId: 1198368804, pov: { pan: 64.0, tilt: 0.9, zoom: 0 } },
             { name: "GS25(양산문성)", addr: "경남 양산시 평산동 31-5", panoId: 1204592950, pov: { pan: 269.6, tilt: 1.0, zoom: 1 } },
             { name: "우리들공업탑점", addr: "울산 남구 신정동 1233-3", isClosed: true, customMessage: "과거 '영화유통'으로 불리며 1등 당첨자를 10회 이상 배출한 유명 명당이었으나, 현재는 점주 별세 및 자격 문제로 인해 폐업 상태입니다." },
-            { name: "메트로센터점", addr: "대구 중구 덕산동 88 메트로센터C412호", imageUrl: "assets/img/metro_260213.jpg", customMessage: "반월당역 지하상가(C412호) 중심부에 위치하고 있습니다." },
-            { name: "행복한사람들(흥부네)", addr: "경기 광주시 초월읍 산이리 13-1", imageUrl: "assets/img/happypeople_260213.jpg", customMessage: "이 점포는 도로 인접성 문제로 로드뷰 제공이 어려워 현장 사진으로 대체합니다。" },
+            { name: "메트로센터점", addr: "대구 중구 덕산동 88 (달구벌대로 지하 2100) C412호", imageUrl: "assets/img/metro_260213.jpg", customMessage: "반월당역 지하상가(C412호) 중심부에 위치하고 있습니다. (기존 4회 + 로드명주소 5회 합산 총 9회 당첨)" },
+            { name: "행복한사람들(흥부네)", addr: "경기 광주시 경충대로 763 (초월읍 산이리 13-1)", imageUrl: "assets/img/happypeople_260213.jpg", customMessage: "이 점포는 도로 인접성 문제로 로드뷰 제공이 어려워 현장 사진으로 대체합니다. (기존 1회 + 도로명주소 5회 합산 총 6회 당첨)" },
             { name: "인터넷 복권판매사이트", addr: "서울특별시 서초구 남부순환로", customLink: "https://www.dhlottery.co.kr/userGuide", customMessage: "동 판매점은 온라인 구매가능한 동행복권 싸이트로 연결드립니다." },
             { name: "25시슈퍼", addr: "함송로14번길 13-17", panoId: 1176030807, pov: { pan: 310.46, tilt: 0.85, zoom: -1 } },
             { name: "복권판매점", addr: "동탄중심상가2길 37 1층으", panoId: 1198012866, pov: { pan: 212.35, tilt: -1.20, zoom: -2 } },
