feat: Register 3 POVs for 3-win shops (I.A 로또마트, 1등로또방, 1등명당)

--- a/index.html
+++ b/index.html
@@ -2508,6 +2508,9 @@
             { name: "인터넷 복권판매사이트", addr: "서울특별시 서초구 남부순환로", customLink: "https://www.dhlottery.co.kr/userGuide", customMessage: "동 판매점은 온라인 구매가능한 동행복권 싸이트로 연결드립니다." },
             { name: "25시슈퍼", addr: "함송로14번길 13-17", panoId: 1176030807, pov: { pan: 310.46, tilt: 0.85, zoom: -1 } },
             { name: "복권판매점", addr: "동탄중심상가2길 37 1층으", panoId: 1198012866, pov: { pan: 212.35, tilt: -1.20, zoom: -2 } },
+            { name: "(I.A) 로또마트", addr: "경기 안산시 단원구", panoid: 1204115898, pov: { pan: 181.61, tilt: 0.91, zoom: -3 } },
+            { name: "1등로또방", addr: "광주 동구 중앙로", panoid: 1200326817, pov: { pan: 308.61, tilt: 15.32, zoom: 0 } },
+            { name: "1등명당", addr: "충남 서천군 장항로", panoid: 1177595058, pov: { pan: 210.48, tilt: 5.06, zoom: -3 } },
             { name: "NBA(엔비에이)", addr: "운서동 2803-1 128호", panoId: 1199042496, pov: { pan: 185.43, tilt: -3.07, zoom: 2 } },
             { name: "헬로마트", addr: "서울 도봉구 도봉2동 89-148", panoId: 1197897753, pov: { pan: 137.1, tilt: 6.5, zoom: 2 } },
             { name: "북문복권방", addr: "정조로 927-1", panoId: 1199757912, pov: { pan: 147.1, tilt: 4.8, zoom: 2 } },
