--- a/index.html
+++ b/index.html
@@ -2511,6 +2511,44 @@
             { name: "(I.A) 로또마트", addr: "경기 안산시 단원구", panoid: 1204115898, pov: { pan: 181.61, tilt: 0.91, zoom: -3 } },
             { name: "1등로또방", addr: "광주 동구 중앙로", panoid: 1200326817, pov: { pan: 308.61, tilt: 15.32, zoom: 0 } },
             { name: "1등명당", addr: "충남 서천군 장항로", panoid: 1177595058, pov: { pan: 210.48, tilt: 5.06, zoom: -3 } },
+            { name: "1번지복권방", addr: "경기 성남시 중원구", panoid: 1198797521, pov: { pan: 186.72, tilt: 0.43, zoom: -3 } },
+            { name: "CU(거제해금강)", addr: "경남 거제시 고현동", panoid: 1204667361, pov: { pan: 283.99, tilt: 2.14, zoom: 1 } },
+            { name: "CU(달동초이스점)", addr: "울산 남구 달동", panoid: 1202053722, pov: { pan: 125.30, tilt: 5.99, zoom: 1 } },
+            { name: "CU(제천역점)", addr: "충북 제천시 화산동", panoid: 1185322618, pov: { pan: 176.31, tilt: 1.59, zoom: 1 } },
+            { name: "CU노서점", addr: "경북 경주시 금성로259번길", panoid: 1187221443, pov: { pan: 51.09, tilt: 3.66, zoom: -1 } },
+            { name: "GMART", addr: "경북 구미시 구미중앙로", panoid: 1165801425, pov: { pan: 10.82, tilt: 3.71, zoom: 0 } },
+            { name: "GS25(고양주교점)", addr: "경기 고양시 덕양구", panoid: 1203877767, pov: { pan: 206.52, tilt: -2.65, zoom: -1 } },
+            { name: "GS25(구로제일)", addr: "서울 구로구 구로동", panoid: 1198518853, pov: { pan: 259.12, tilt: -0.82, zoom: 0 } },
+            { name: "GS25(청주수곡점)", addr: "충북 청주시 서원구", panoid: 1170580086, pov: { pan: 231.04, tilt: 2.27, zoom: 0 } },
+            { name: "Goodday복권전문점", addr: "경남 창원시 성산구", panoid: 1204230685, pov: { pan: 322.84, tilt: 9.00, zoom: -3 } },
+            { name: "LG슈퍼", addr: "경기 광명시 철산동", panoid: 1203337015, pov: { pan: 49.06, tilt: 1.76, zoom: -3 } },
+            { name: "SK@24시편의점", addr: "경기 파주시 아동동 589-10", isClosed: true, customMessage: "현재 폐점된 매장입니다." },
+            { name: "GS25(안산산호)", addr: "경기 안산시 단원구 선부동 1081산호한양상가101호", imageUrl: "assets/img/GS 안산산호점_260214.jpg", customMessage: "산호한양상가 1층에 위치한 GS25 편의점입니다." },
+            { name: "가판", addr: "서울 마포구 도화2동 169 고려2 앞가판", isClosed: true, customMessage: "현재 폐점되었습니다. (가든호텔정문옆가판으로 이전 확인)" },
+            { name: "가판 창동역점", addr: "서울 도봉구 창동 3-3 창동역문화마당앞", isClosed: true, customMessage: "현재 해당 위치의 가로판매대는 폐점되었거나 이전되었습니다." },
+            { name: "가판점", addr: "서울 서초구 서초동(서초3동) 1602-2 가판", isClosed: true, customMessage: "현재 폐점된 가판대입니다." },
+            { name: "가로가판대", addr: "서울 관악구 신림동(조원동) 1643-6" },
+            { name: "가로판매대", addr: "서울 강동구 올림픽로 648 천호역 3번 출구 앞(가판점)" },
+            { name: "가로판매대", addr: "서울 종로구 교남동", panoid: 1201585664, pov: { pan: 87.39, tilt: 13.86, zoom: -2 } },
+            { name: "가자복권천국", addr: "전남 목포시 상동", panoid: 1192597069, pov: { pan: 352.61, tilt: -0.23, zoom: 3 } },
+            { name: "가든호텔정문옆가판", addr: "서울 마포구 도화동 169-1", panoid: 1197820704, pov: { pan: 109.3, tilt: -0.9, zoom: 0 } },
+            { name: "건강마트", addr: "경기 하남시 신장2동", panoid: 1173493468, pov: { pan: 130.32, tilt: 5.56, zoom: -2 } },
+            { name: "경동G-PLUS할인마트", addr: "부산 해운대구 좌동", panoid: 1202480351, pov: { pan: 217.60, tilt: 6.09, zoom: 3 } },
+            { name: "경성식품", addr: "서울 동대문구 휘경1동", panoid: 1198205251, pov: { pan: 15.21, tilt: 3.58, zoom: 0 } },
+            { name: "공원슈퍼", addr: "경기 수원시 장안구", panoid: 1199575474, pov: { pan: 327.50, tilt: 4.59, zoom: -2 } },
+            { name: "광성슈퍼", addr: "경기 이천시 단월동", panoid: 1175073789, pov: { pan: 233.36, tilt: 4.00, zoom: -3 } },
+            { name: "교하로또판매점", addr: "경기 파주시 파주로", panoid: 1203181718, pov: { pan: 275.18, tilt: -2.11, zoom: -3 } },
+            { name: "구산복권방", addr: "경남 김해시 구산동", panoid: 1193912431, pov: { pan: 241.41, tilt: 0.35, zoom: 0 } },
+            { name: "구포라인점", addr: "부산 북구 구포동", panoid: 1202526440, pov: { pan: 256.93, tilt: -2.56, zoom: 0 } },
+            { name: "굿타임", addr: "서울 서대문구 연희동 353-94", panoid: 1197871361, pov: { pan: 194.7, tilt: 0.3, zoom: 0 } },
+            { name: "그린마트", addr: "경기 성남시 분당구 대왕판교로 255 107호", panoid: 1198963691, pov: { pan: 274.7, tilt: 1.2, zoom: 4 } },
+            { name: "그린마트", addr: "서울 송파구 백제고분로19길", panoid: 1197973342, pov: { pan: 85.96, tilt: 9.15, zoom: -2 } },
+            { name: "금강복권", addr: "경기 김포시 율생로 3", panoid: 1203805177, pov: { pan: 152.85, tilt: 5.78, zoom: 0 } },
+            { name: "기장슈퍼", addr: "부산 기장군 차성동로 69", panoid: 1033564888, pov: { pan: 350.25, tilt: 1.40, zoom: -3 } },
+            { name: "까치복권방", addr: "경기 시흥시 중심상가로 326 1동 102호", panoid: 1176040887, pov: { pan: 245.5, tilt: -0.8, zoom: 1 } },
+            { name: "나나 복권판매소", addr: "경남 양산시 상북면 상북중앙로 319", panoid: 1204563526, pov: { pan: 275.4, tilt: 0.6, zoom: 3 }, customMessage: "석계리 272-18에서 이전된 1등 5회 명당입니다. (상북중앙로 319 위치)" },
+            { name: "나래복권", addr: "충북 충주시 충원대로 952", panoid: 1163813266, pov: { pan: 104.78, tilt: 1.24, zoom: 2 }, isClosed: true, customMessage: "현재 폐점 또는 로또 판매 중단 상태입니다. (과거 1등 4회 명당)" },
+            { name: "넝쿨째(블루25 중앙점)", addr: "경남 창원시 마산합포구 중앙동2가 2-280", panoid: 1204644268, pov: { pan: 309.7, tilt: -9.2, zoom: 1 }, customMessage: "788회차에서 1등 3명이 동시에 배출된 진기록의 명당입니다." },
             { name: "NBA(엔비에이)", addr: "운서동 2803-1 128호", panoId: 1199042496, pov: { pan: 185.43, tilt: -3.07, zoom: 2 } },
             { name: "헬로마트", addr: "서울 도봉구 도봉2동 89-148", panoId: 1197897753, pov: { pan: 137.1, tilt: 6.5, zoom: 2 } },
             { name: "북문복권방", addr: "정조로 927-1", panoId: 1199757912, pov: { pan: 147.1, tilt: 4.8, zoom: 2 } },
